# Company-Management-System-Simulation

./: CMakeLists.txt  Company.cpp  Company.h  Employee.cpp  Employee.h  FullTime.cpp  FullTime.h  Input_Validation.h  PartTime.cpp  PartTime.h  README.md  Testing.cpp  Training.cpp  Training.h  main.cpp
